--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ sureshsumathi.s04@gmail.com </a>
 
 </div>
 
-<div class="credit"> created by <span> Kaushlendra </span> | all rights reserved
+<div class="credit"> created by <span> Sumathi </span> | all rights reserved
 </div>
 
 </section>
